<resources>
    <string name="app_name">Cheshka</string>
    <string name="server_address_text">Server address:</string>
    <string name="server_address_example" translatable="false">playcheshka.deewend.com</string>
    <string name="server_port_text">Server port:</string>
    <string name="username_text">Preferred username:</string>
    <string name="username_example" translatable="false">Vasily123</string>
    <string name="solve_captcha_text">The server asks to prove you are not a robot:</string>
    <string name="generate_another_captcha_text">Generate another challenge</string>
    <string name="proceed_text">Proceed</string>
    <string name="game_logo_text">Game logo</string>
    <string name="beta_text">beta</string>
    <string name="protocol_no_further_information_text">no further information</string>
    <string name="protocol_unknown_pid_text">unknown packet identifier (%d)</string>
    <string name="protocol_bad_signature_text">bad signature detected</string>
    <string name="protocol_unexpected_text">"expected to receive %s packet, got: "</string>
    <string name="protocol_bad_magic_text">bad magic number</string>
    <string name="protocol_error_text">A communication issue occurred: %s</string>
    <string name="disconnected_text">disconnected, reason: \"%s\".</string>
    <string name="please_wait_text">Please wait…</string>
    <string name="bad_integer_text">Found a bad integer in one of the input fields, please try again</string>
    <string name="captcha_text">Captcha challenge</string>
    <string name="copyright_text">Version %s\n© deewend, 2025–2026</string>
    <string name="links_text"><a href="https://cheshka.deewend.com/tutorial">Tutorial</a> · <a href="https://cheshka.deewend.com">Website</a> · <a href="https://cheshka.deewend.com/privacy">Privacy policy</a> · <a href="https://cheshka.deewend.com/git">GitHub repository</a></string>
    <string name="captcha_hint_text">Captcha solution…</string>
    <string name="too_much_data_text">The server sends too much data. The connection was terminated</string>
    <string name="weird_ui_stuff_text">Too much UI data was freed at the moment of handling a network packet. The game is unable to handle updates</string>
    <string name="successful_auth_text">Successful authentication</string>
    <string name="opponent_not_found">Opponent was not found</string>
    <string name="dice_bad_value_text">The server sent a bad dice roll result</string>
    <string name="accept_invitation_text">Accept invitation</string>
    <string name="create_invitation_button">Create invitation code</string>
    <string name="play_with_a_random_opponent_text">Play with a random opponent</string>
    <string name="disconnect_text">Disconnect</string>
    <string name="you_are_playing_at_text">You are playing at %s\nServer MOTD: %s</string>
    <string name="server_stats_text">Online player count: %d\nActive games count: %d\n</string>
    <string name="server_logo_text">Server logo</string>
    <string name="or_text">Or…</string>
    <string name="invitation_code_hint_text">Your invitation code…</string>
    <string name="invitation_code_text">Invitation code: %s</string>
    <string name="waiting_for_opponent_text">Waiting for the opponent, press \"Back\" to cancel…</string>
    <string name="chess_board_text">A chess board</string>
    <string name="roll_dice_text">Roll dice</string>
    <string name="place_checker_text">Place a checker</string>
    <string name="resign_text">Resign</string>
    <string name="dice_text">A dice</string>
    <string name="press_again_text">Press one more time to exit the game</string>
    <string name="game_status_text">%s turn. ≈%ds. left</string>
    <string name="singleplayer_game_status_text">%s turn</string>
    <string name="your_turn_fragment">Your</string>
    <string name="opponents_turn_fragment">Opponent\'s</string>
    <string name="game_finished_you_text">Game finished. You are victorious</string>
    <string name="game_finished_opponent_text">Game finished. Opponent is victorious</string>
    <string name="game_finished_draw_text">Game ended in a draw</string>
    <string name="game_finished_you_resigned_text">Game finished. You resigned</string>
    <string name="game_finished_opponent_resigned_text">Game finished. Opponent resigned</string>
    <string name="game_finished_both_resigned_text">Game finished in a draw. Players resigned at the same time</string>
    <string name="opponent_is_afk">Opponent is AFK</string>
    <string name="no_moves_text">no possible moves</string>
    <string name="disconnected_title_text">Disconnected</string>
    <string name="reconnect_text">Reconnect</string>
    <string name="main_menu_text">Main menu</string>
    <string name="synchronization_issue_text">A synchronization issue might have been occurred. Reconnect if needed</string>
    <string name="details_text">Issue details: %s\nAdditional information: %s</string>
    <string name="not_specified_text">&lt;not specified&gt;</string>
    <string name="matchmaking_cancelled_text">Successfully cancelled matchmaking</string>
    <string name="singleplayer_text">Singleplayer</string>
    <string name="bot_text">Bot</string>
    <string name="game_already_ended_text">The game has already ended</string>
    <string name="vs_text" translatable="false">%s vs %s%s</string>
    <string name="assets_attribution_text">Assets Attribution</string>
    <string name="io_issue_text">An I/O issue occurred</string>
    <string name="eval_bar_text">An eval bar</string>
    <string name="sounds_checkbox_text">Enable sounds</string>
    <string name="timer_checkbox_text">Show playtime</string>
    <string name="movement_animation_checkbox_text">Enable piece movement animation</string>
    <string name="eval_bar_checkbox_text">Enable evaluation bar</string>
    <string name="cancel_text">Cancel</string>
    <string name="confirm_text">Confirm</string>
    <string name="resign_title_text">You are about to resign</string>
    <string name="issue_detected_text">An issue was detected</string>
    <string name="issue_detected_description_text">The game has detected an unexpected issue and generated a crash report. You can help the developers by sending this report via your mail client. If this behavior is supported, you will have the opportunity to review its contents before sending</string>
    <string name="special_highlighting_text">Enable special highlighting for pieces turning onto the diagonal line</string>
    <string name="difficulty_text">Difficulty:</string>
    <string name="board_size_text">Board size:</string>
    <string-array name="difficulty_array">
        <item>Normal</item>
        <item>Hard</item>
        <item>Noticeably hard</item>
    </string-array>
    <string-array name="board_size_array">
        <item>6 × 6</item>
        <item>8 × 8 (standard)</item>
        <item>10 × 10</item>
    </string-array>
    <string name="singleplayer_options_title">Singleplayer options</string>
    <string name="you_text">You</string>
    <string name="command_title_text">Command</string>
    <string name="command_warning_text">Debug commands are an experimental feature. Syntax and/or logic errors may result in a game crash</string>
    <string name="unknown_command_text">Unknown command</string>
    <string name="guarantee_10_text">Guarantee rolling a 6 after 10 skipped moves</string>
    <string name="settings_text">Settings</string>
    <string name="autosave_text">Changes are saved automatically</string>
    <string name="close_text">Close</string>
    <string name="multiplayer_text">Multiplayer</string>
    <string name="cmd_dispatcher_text">Experimental command dispatcher (<a href="https://cheshka.deewend.com/commands-en">more info</a>)</string>
    <string name="command_example" translatable="false">!load size(12) white(0 1 2)</string>
    <string name="execute_command_text">Execute command</string>
    <string name="cmd_should_start_with">Commands should start with \'!\' symbol</string>
    <string name="bad_configuration_text">Please uncheck 2 options above in order to play \"Noticeably hard\" mode</string>
    <string name="empty_server_address_text">Please specify server address (for example, playcheshka.deewend.com)</string>
    <string name="huawei_notification_text">This game build is designed for HUAWEI AppGallery. Only official game server is supported.</string>
    <string name="third_party_servers_warning_text">Multiplayer mode allows you to connect to user-hosted servers. Content on these servers, including usernames and server messages, is not moderated by the developer. You may encounter inappropriate or unexpected content. Please connect only to servers you trust.</string>
    <string name="credentials_title_text">Last saved credentials</string>
    <string name="credentials_text">The following text is copyable.\n\nServer address: %s\nServer port: %s\nUsername: %s\nUUID: %s</string>
    <string name="delete_uuid_text">Delete UUID locally</string>
    <string name="success_text">Success</string>
    <string name="none_text">none</string>
    <string name="context_lost_title_text">Game context lost</string>
    <string name="context_lost_text">The operating system of your device (likely, its power-saving features) has incorrectly terminated the game. Do not worry: Cheshka is able to recover your game state.\n\nIf it was a singleplayer game, go to the main menu, press the \"Singleplayer\" button and you will be asked if you want to restore your previous session.\nIf it was a multiplayer game, reconnect to the server and you will automatically return to the game if it is still running.</string>
    <string name="dice_face_view_description_text">How many times was %d rolled?</string>
    <string name="press_back_to_return_text">Press the \"Back\" button to return to the game</string>
    <string name="view_stats_text">Statistics</string>
    <string name="game_recovery_dialog_title">Game recovery</string>
    <string name="game_recovery_dialog_text">Found an unfinished game that was started %s. Would you like to load it?</string>
    <string name="yes_text">Yes</string>
    <string name="recovery_later_text">Ask me later</string>
    <string name="no_text">No, thanks</string>
    <string name="recovery_error_text">Failed to recover your game, we apologize for the inconvenience</string>
    <string name="unknown_text">&lt;unknown&gt;</string>
    <string name="recovery_later_warning_text">Please note that starting a new game will result in losing previous progress</string>
    <string name="show_user_generated_content_checkbox_text">Show user-generated content (multiplayer only)</string>
    <string name="add_initial_pieces_text">Add the initial pieces (recommended for beginners)</string>
    <string name="statistics_explanation_text">White numbers – times this face was used\nGrey numbers – total times this face was rolled\nPercentage difference is based on the white numbers</string>
    <string name="sum_text">Sum</string>
    <string-array name="highlighted_cell_color_array">
        <item>Clean yellow</item>
        <item>Bright cyan</item>
    </string-array>
    <string name="destination_cell_color_text">Destination cell color:</string>
</resources>