<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp">

        <ImageView
            android:id="@+id/server_logo_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/server_logo_text" />

        <TextView
            android:id="@+id/you_are_playing_at_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/server_stats_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/invitation_code_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:autofillHints=""
            android:inputType="text"
            android:hint="@string/invitation_code_hint_text" />

        <Button
            android:id="@+id/accept_invitation_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accept_invitation_text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/or_text" />

        <Button
            android:id="@+id/create_invitation_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_invitation_button" />

        <Button
            android:id="@+id/play_with_a_random_opponent_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play_with_a_random_opponent_text" />

        <Button
            android:id="@+id/disconnect_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disconnect_text" />
    </LinearLayout>
</ScrollView>