<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp">

        <ImageView
            android:id="@+id/game_image_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/game_logo_text"
            android:src="@drawable/cheshka_logo"
            android:layout_marginBottom="12dp" />

        <!-- Should be displayed only in landscape mode. -->
        <TextView
            android:id="@+id/game_text_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:fontFamily="sans-serif"
            android:textColor="@color/white"
            android:textSize="48sp"
            android:gravity="center"
            android:layout_marginBottom="12dp" />

        <Button
            android:id="@+id/singleplayer_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/singleplayer_text" />

        <Button
            android:id="@+id/multiplayer_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/multiplayer_text" />

        <Button
            android:id="@+id/settings_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_text" />

        <TextView
            android:id="@+id/cmd_dispatcher_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/command_field"
            android:gravity="center"
            android:text="@string/cmd_dispatcher_text"
            android:visibility="gone" />

        <EditText
            android:id="@+id/command_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:autofillHints=""
            android:inputType="text"
            android:hint="@string/command_example"
            android:visibility="gone" />

        <Button
            android:id="@+id/execute_command_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/execute_command_text"
            android:visibility="gone" />

        <TextView
            android:id="@+id/copyright_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center" />

        <Button
            android:id="@+id/show_assets_attribution_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/assets_attribution_text" />

        <TextView
            android:id="@+id/attribution_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/assets_attribution_text"
            android:visibility="gone" />

        <TextView
            android:id="@+id/attribution_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="gone" />

        <TextView
            android:id="@+id/links_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/links_text"
            android:gravity="center"
            android:layout_marginBottom="16dp" />
    </LinearLayout>
</ScrollView>