<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/autosave_text" />

        <CheckBox
            android:id="@+id/sounds_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:text="@string/sounds_checkbox_text" />

        <CheckBox
            android:id="@+id/timer_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:text="@string/timer_checkbox_text" />

        <CheckBox
            android:id="@+id/movement_animation_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:text="@string/movement_animation_checkbox_text" />

        <CheckBox
            android:id="@+id/special_highlighting_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:text="@string/special_highlighting_text" />

        <CheckBox
            android:id="@+id/eval_bar_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:text="@string/eval_bar_checkbox_text" />
    </LinearLayout>
</ScrollView>