<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/captcha_field"
            android:text="@string/solve_captcha_text" />

        <ImageView
            android:id="@+id/captcha_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/captcha_text" />

        <Button
            android:id="@+id/generate_another_captcha_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generate_another_captcha_text" />

        <EditText
            android:id="@+id/captcha_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:autofillHints=""
            android:inputType="text"
            android:hint="@string/captcha_hint_text" />

        <Button
            android:id="@+id/proceed_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/proceed_text" />
    </LinearLayout>
</ScrollView>