<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/player_names_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold" />

    <ru.deewend.cheshka.DiceView
        android:id="@+id/dice_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/dice_text" />

    <ru.deewend.cheshka.BoardView
        android:id="@+id/board_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:contentDescription="@string/chess_board_text"
        tools:ignore="InefficientWeight" />

    <ru.deewend.cheshka.EvalBarView
        android:id="@+id/eval_bar_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/eval_bar_text"
        android:visibility="gone" />

    <TextView
        android:id="@+id/game_status_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/roll_dice_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/roll_dice_text" />

        <Button
            android:id="@+id/place_checker_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/place_checker_text" />
    </LinearLayout>

    <Button
        android:id="@+id/resign_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resign_text" />
</LinearLayout>