<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/difficulty_text" />

        <Spinner
            android:id="@+id/difficulty_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:minHeight="48dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/board_size_text" />

        <Spinner
            android:id="@+id/board_size_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:minHeight="48dp" />

        <CheckBox
            android:id="@+id/add_initial_pieces"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:text="@string/add_initial_pieces_text" />

        <CheckBox
            android:id="@+id/guarantee_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:text="@string/guarantee_10_text" />

        <TextView
            android:id="@+id/bad_configuration_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:text="@string/bad_configuration_text"
            android:visibility="gone" />
    </LinearLayout>
</ScrollView>