<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:textStyle="bold"
            android:text="@string/context_lost_title_text" />

        <TextView
            android:id="@+id/details_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/context_lost_text" />

        <Button
            android:id="@+id/goto_main_menu_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/main_menu_text" />
    </LinearLayout>
</ScrollView>