<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="24dp">

        <TextView
            android:id="@+id/recovery_dialog_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/recovery_yes_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yes_text" />

        <Button
            android:id="@+id/recovery_later_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recovery_later_text" />

        <Button
            android:id="@+id/recovery_no_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_text" />
    </LinearLayout>
</ScrollView>